Bug 507401 - Show Desktop behaves the same as Peek at Desktop
Summary: Show Desktop behaves the same as Peek at Desktop
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.4.3
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-07-23 17:02 UTC by kde.mooing651
Modified: 2025-09-24 22:11 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kde.mooing651 2025-07-23 17:02:49 UTC
Observed Behavior: When using the Show Desktop keyboard shortcut (CTRL + F12 by default), the desktop will be shown, but upon opening a new app or returning to a minimized app, all other minimized apps will also open. 

This behavior is also observed with the Peek at Desktop shortcut (SUPER + D by default), which is to be expected. Now there are two separate functions, Peek at Desktop and Show Desktop, that both do the same thing. 

Expected Behavior: Prior to updating Plasma, I did not have this issue. Using Show Desktop would minimize all apps, and opening a new app would only open that app while everything else would stay minimized. 

Steps to reproduce:
1. Open multiple apps (anything works)
2. Press CTRL + F12 to show the desktop
3. Re-open one of the minimized apps, or launch a new one
4. All apps that were minimized in step 2 will now return as well
5. Press SUPER + D to peek at the desktop
6. Re-open one of the minimized apps, or launch a new one
7. Behavior is the same, the minimized apps will all return.
Comment 1 Nate Graham 2025-09-17 16:42:16 UTC
They are indeed the same thing. The widget was named "Peek at desktop" and I guess we forgot to rename the KWin action. I'll look into it.
Comment 2 Bug Janitor Service 2025-09-17 18:26:31 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/8125
Comment 3 Nate Graham 2025-09-22 15:28:10 UTC
Git commit 43987174d3b88b58b700829f6ac9ac308d145c18 by Nate Graham.
Committed on 22/09/2025 at 14:37.
Pushed by ngraham into branch 'master'.

tabbox: unify on "Peek at Desktop" name

We already renamed the widget to this some time ago in Plasma, but never
mirrored that name change to KWin.
FIXED-IN: 6.5.0

M  +1    -1    doc/kwintabbox/index.docbook
M  +1    -1    src/kcms/tabbox/layoutpreview.cpp
M  +1    -1    src/kcms/tabbox/main.ui
M  +2    -2    src/tabbox/clientmodel.cpp

https://invent.kde.org/plasma/kwin/-/commit/43987174d3b88b58b700829f6ac9ac308d145c18
Comment 4 Nate Graham 2025-09-24 22:11:29 UTC
Git commit 5bcfb924bed8f6e060de57f090166e55f67ae0b1 by Nate Graham.
Committed on 24/09/2025 at 21:33.
Pushed by ngraham into branch 'Plasma/6.5'.

tabbox: unify on "Peek at Desktop" name

We already renamed the widget to this some time ago in Plasma, but never
mirrored that name change to KWin.
FIXED-IN: 6.5.0


(cherry picked from commit 43987174d3b88b58b700829f6ac9ac308d145c18)

Co-authored-by: Nate Graham <nate@kde.org>

M  +1    -1    doc/kwintabbox/index.docbook
M  +1    -1    src/kcms/tabbox/layoutpreview.cpp
M  +1    -1    src/kcms/tabbox/main.ui
M  +2    -2    src/tabbox/clientmodel.cpp

https://invent.kde.org/plasma/kwin/-/commit/5bcfb924bed8f6e060de57f090166e55f67ae0b1