tabbox: unify on "Peek at Desktop" name

We already renamed the widget to this some time ago in Plasma, but never
mirrored that name change to KWin.

BUG: 507401
FIXED-IN: 6.5.0